--- a/src/Styles/Typography.less
+++ b/src/Styles/Typography.less
@@ -2,19 +2,18 @@
 
 :global {
     body, html, button, input, textarea {
-        font-family: @base-font-family;
-        font-size: @base-font-size;
-        line-height: @base-line-height;
-        color: @base-text-color;
+        font-family: Garamond, sans-serif;
+        font-size: 16px;
+        line-height: 24px;
+        color: #333333;
     }
 
     a {
-        text-decoration: none;
     }
 
     h1 {
         font-weight: 300;
-        font-size: 42px;
+        font-size: 52px;
         line-height: 50px;
     }
 
